testdata/baselines/reference/submodule/compiler/jsFileCompilationInterfaceSyntax.errors.txt
a.js(1,1): error TS8006: 'interface' declarations can only be used in TypeScript files.


==== a.js (1 errors) ====
    interface I { }
    ~~~~~~~~~~~~~~~
!!! error TS8006: 'interface' declarations can only be used in TypeScript files.